@@ -31,9 +31,9 @@
     </tr>
   </thead>
 
-  <% Applicant.current.where(enrolled: true).order('last_name, first_name').each do |applicant| %> <%# status: 'current' ? %>
+  <% Applicant.current_trainee.order('last_name, first_name').each do |applicant| %> <%# status: 'current' ? %>
     <tr>
-      <td><%= applicant.reverse_name %></td>
+      <td><%= link_to applicant.reverse_name, applicant %></td>
       <td id="applicant_<%= applicant.id %>_seminar_<%= @seminar.id %>_attendance">
         <%= render partial: 'attendance', locals: { applicant: applicant, seminar: @seminar } %>
       </td>
