@@ -1,0 +1,60 @@
+<h2>Upcoming Seminars</h2>
+
+<table cellspacing="0" cellpadding="4">
+  <thead>
+    <tr>
+      <th style="white-space:nowrap;text-align:left">Presenter</th>
+      <th style="white-space:nowrap;text-align:left">Presentation Title</th>
+      <th style="white-space:nowrap;text-align:left">Presentation Date</th>
+      <th style="white-space:nowrap;text-align:left">Category</th>
+    </tr>
+  </thead>
+
+  <% @seminars.order('presentation_date').each do |seminar| %>
+    <tr>
+      <td style="border-bottom:1px solid #777;"><%= seminar.presenter %></td>
+      <td style="border-bottom:1px solid #777;"><i><%= seminar.presentation_title %></i></td>
+      <td style="border-bottom:1px solid #777;"><%= seminar.presentation_date_with_time %></td>
+      <td style="border-bottom:1px solid #777;"><%= seminar.category %></td>
+    </tr>
+  <% end %>
+</table>
+
+<br />
+
+<% past_seminars = Seminar.current.date_before(Date.today - 1.day).date_after(Date.today - 6.months).order('presentation_date desc') %>
+
+<% if past_seminars.size > 0 %>
+  <h2>Past 6-month Attendance (<%= @applicant.seminars.where(id: past_seminars.pluck(:id)).count %> out of <%= past_seminars.size %>)</h2>
+
+  <table cellspacing="0" cellpadding="4">
+    <thead>
+      <tr>
+        <th>Attended</th>
+        <th style="white-space:nowrap;text-align:left">Presenter</th>
+        <th style="white-space:nowrap;text-align:left">Presentation Title</th>
+        <th style="white-space:nowrap;text-align:left">Presentation Date</th>
+        <th style="white-space:nowrap;text-align:left">Category</th>
+      </tr>
+    </thead>
+    <% past_seminars.each do |seminar| %>
+      <% attended = (@applicant.seminars.where(id: seminar.id).count == 1) %>
+      <tr>
+        <td style="border-bottom:1px solid #777;"><%= attended ? 'Yes' : 'No' %></td>
+        <td style="border-bottom:1px solid #777;"><%= seminar.presenter %></td>
+        <td style="border-bottom:1px solid #777;"><%= seminar.presentation_title %></td>
+        <td style="border-bottom:1px solid #777;"><%= seminar.presentation_date_with_time %></td>
+        <td style="border-bottom:1px solid #777;"><%= seminar.category %></td>
+      </tr>
+    <% end %>
+  </table>
+
+<% end %>
+
+<% if defined?(TG_ADMIN_EMAIL) and not TG_ADMIN_EMAIL.blank? %>
+  <br />
+  If you feel the above record is incorrect, please send an email to: <%= mail_to TG_ADMIN_EMAIL %><br />
+<% end %>
+
+<br />
+<div style="color:#777">This email was automatically generated by the <%= link_to DEFAULT_APP_NAME, SITE_URL %> System Mailer.</div>
