@@ -1,0 +1,34 @@
+Upcoming Seminars
+
+<% @seminars.order('presentation_date').each do |seminar| %>
+<% presenter_and_title = [seminar.presenter, seminar.presentation_title].select{|i| not i.blank?}.join(' - ') %>
+
+<%= presenter_and_title %>
+  <%= seminar.presentation_date_with_time %> - <%= seminar.category %>
+
+
+<% end %>
+
+<% past_seminars = Seminar.current.date_before(Date.today - 1.day).date_after(Date.today - 3.months).order('presentation_date desc') %>
+
+<% if past_seminars.size > 0 %>
+Past 6-month Attendance (<%= @applicant.seminars.where(id: past_seminars.pluck(:id)).count %> out of <%= past_seminars.size %>)
+
+    <% past_seminars.each do |seminar| %>
+      <% attended = (@applicant.seminars.where(id: seminar.id).count == 1) %>
+
+<%= attended ? '[yes]' : '[NO] ' %> <%= [seminar.presenter, seminar.presentation_title].select{|i| not i.blank?}.join(' - ') %>
+        <%= seminar.presentation_date_with_time %> - <%= seminar.category %>
+
+    <% end %>
+<% end %>
+
+<% if defined?(TG_ADMIN_EMAIL) and not TG_ADMIN_EMAIL.blank? %>
+____________________________________________________________________<%= '_'* TG_ADMIN_EMAIL.size %>
+
+If you feel the above record is incorrect, please send an email to: <%= mail_to TG_ADMIN_EMAIL %>
+____________________________________________________________________<%= '_'* TG_ADMIN_EMAIL.size %>
+<% end %>
+
+
+This email was automatically generated by the <%= link_to DEFAULT_APP_NAME, SITE_URL %> System Mailer.
